First more or less working version

--- a/Rmarkdown/experiment_summary.Rmd
+++ b/Rmarkdown/experiment_summary.Rmd
@@ -23,44 +23,7 @@ library(RanCh)
 library(tidyverse)
 library(kableExtra)
 library(here)
-```
-
-```{r preamble, echo=F, message=FALSE, warning=FALSE}
-get_scalars <- function(exper) {
-  n_cycles <- length(exper$RP_cycle_stats[, 'cum_ln_marl'])
-  n_groups <- length(exper$RC_marl_stats$gr_cum_ln_marl)
-  result <-
-    c(mm_marl = exper$max_min_ln_marl,
-      unifP_marl = exper$uniform_P_ln_marl,
-      P_maxl = exper$P_maxl,
-      pi_maxl = exper$pi_maxl$ln_maxl,
-      RC_marl = mean(exper$RC_marl_stats$gr_cum_ln_marl),
-      RC_marl_nse = sd(exper$RC_marl_stats$gr_cum_ln_marl)/sqrt(n_groups),
-      RP_marl = unname(exper$RP_cycle_stats[n_cycles, 'cum_ln_marl']),
-      RP_marl_nse2 = unname(exper$RP_cycle_stats[n_cycles, 'cum_ln_marl_nse2']),
-      pi_nS = sum(exper$pi_maxl$S),
-      pi_nit = exper$pi_maxl$n_iter,
-      pi_sdel = exper$pi_maxl$score_range,
-      pi_ldel = exper$pi_maxl$ln_maxl_diff,
-      RC_t = unname(exper$RC_time[3]),
-      RP_t = unname(exper$RP_time[3]),
-      pi_t = unname(exper$pi_maxl_time[3]),
-      RC_al_mu = exper$RC_alpha_stats$mu,
-      RC_al_nse = exper$RC_alpha_stats$nse,
-      RC_al_rne = exper$RC_alpha_stats$rne,
-      RP_al_mu = exper$RP_alpha_stats$mu,
-      RP_al_nse = exper$RP_alpha_stats$nse,
-      RP_al_rne = exper$RP_alpha_stats$rne,
-      n_plus = exper$n_plus,
-      theta1 = unname(exper$theta[1]),
-      theta2 = unname(exper$theta[2]),
-      theta3 = unname(exper$theta[3])
-    )
-}
-
-tbl <- as_tibble(t(sapply(sim, get_scalars)))
-tbl$exper = seq(32)
-tbl$RP_marl_nse = sqrt(tbl$RP_marl_nse2)
+source("create_results_table.R")
 ```
 
 The following table shows marginal and maximum likelihood values by domain.
