Change bin_term to bin_tern (typo)

--- a/Rmarkdown/domain_results_template.Rmd
+++ b/Rmarkdown/domain_results_template.Rmd
@@ -27,7 +27,7 @@ print(exper$N, na.print='-')
 The following figure shows an array of simplex plots for the tripleton subsets of the choice domain.
 
 ```{r simplex_plots, echo=FALSE, fig.width=8, fig.height=10}
-RanCh::bin_term_MR_plot_all(exper$N)
+RanCh::bin_tern_MR_plot_all(exper$N)
 ```
 
 \pagebreak
