new create_highlights.R sim_highlights.Rmd

--- a/Rmarkdown/domain_results_template.Rmd
+++ b/Rmarkdown/domain_results_template.Rmd
@@ -11,7 +11,7 @@ output:
       gensymb: null
 ---
 
-## Rata data
+## Raw data
 
 The following table shows the raw data for this choice domain.
 Each entry $(A,x)$ gives the number of times object $x$ was chosen from the subset $A$.
