--- a/paper/SMCRandomPref.tex
+++ b/paper/SMCRandomPref.tex
@@ -914,7 +914,7 @@ These can be interpreted as unnormalized posterior densities of $\lambda$ for th
 \begin{figure}
   \centering
   \includegraphics[width=\textwidth]{figures/BF_by_lambda.pdf}
-  \caption{Log Bayes factors (left) and Bayes factors (right) by $\lambda$ for domains 30 (top), 24 (middle), and 23 (bottom).}
+  \caption{Log marginal likelihood (left) and unnormalized marginal likleihood as a function of $\lambda$ for domains 30 (top), 24 (middle), and 23 (bottom).}
   \label{f:BF_by_lambda}
 \end{figure}
 
