--- a/Rmarkdown/overview_of_results.Rmd
+++ b/Rmarkdown/overview_of_results.Rmd
@@ -20,7 +20,7 @@ The following table shows marginal and maximum likelihood values by domain.
 The marginal likelihoods for the Dirichlet RC model and Dirichlet RP model are based on simulations and their numerical standard errors (nse) are indicated.
 
 ```{r tables, echo=F, message=FALSE, warning=FALSE}
-table_vars <- c('exper', 'mm_marl', 'unifP_marl',
+table_vars <- c('Domain', 'mm_marl', 'P_marl',
                 'RC_marl', 'RC_marl_nse',
                 'RP_marl', 'RP_marl_nse',
                 'P_maxl', 'pi_maxl')
@@ -28,7 +28,7 @@ digits <- c(0, 2, 2, 2, 4, 2, 3, 2, 2)
 col.names <- c('Domain',
                'max/min', 'uniform-$P$', 'Dir. RC', 'nse', 'Dir. RP', 'nse',
                'RC model', 'RP model')
-kbl(tbl[,table_vars], booktabs=T, digits=digits,
+kbl(sim_tbl[,table_vars], booktabs=T, digits=digits,
     col.names=col.names, format='latex', escape=F) %>%
   add_header_above(c(" " = 1,
                      "Marginal likelihoods" = 6,
@@ -39,13 +39,13 @@ kbl(tbl[,table_vars], booktabs=T, digits=digits,
 
 The following table shows, by domain and for both the Dirichlet RC model and the Dirichlet RP model, a numerical estimate of the posterior mean of $\alpha$, its numerical standard error and its relative numerical efficiency.
 ```{r alpha_table, echo=F, message=FALSE, warning=FALSE}
-table_vars <- c('exper', 'RC_al_mu', 'RC_al_nse', 'RC_al_rne',
+table_vars <- c('Domain', 'RC_al_mu', 'RC_al_nse', 'RC_al_rne',
                 'RP_al_mu', 'RP_al_nse', 'RP_al_rne')
 digits <- c(0, 2, 3, 2, 2, 3, 2)
 col.names <- c('Domain',
                'Est. mean of $\\alpha$', 'nse', 'rne',
                'Est. mean of $\\alpha$', 'nse', 'rne')
-kbl(tbl[,table_vars], booktabs=T, digits=digits,
+kbl(sim_tbl[,table_vars], booktabs=T, digits=digits,
     col.names=col.names, format='latex', escape=F) %>%
   add_header_above(c(" " = 1,
                      "Dirichlet RC posterior" = 3,
@@ -56,10 +56,10 @@ kbl(tbl[,table_vars], booktabs=T, digits=digits,
 
 The following table shows, by domain, the computation time, in seconds, required to compute the RP maximum likelihood, to simulate the posterior distribution of the Dirichlet RC model and to simulate the posterior distribution of the Dirichlet RP model and of intermediate hybrid models.
 ```{r timing_table, echo=F, message=FALSE, warning=FALSE}
-table_vars <- c('exper', 'pi_t', 'RC_t', 'RP_t')
+table_vars <- c('Domain', 'pi_t', 'RC_t', 'RP_t')
 digits <- c(0, 2, 2, 2)
 col.names <- c('Domain', 'RP max. likelihood', 'DRC posterior', 'DRP posterior')
-kbl(tbl[,table_vars], booktabs=T, digits=digits,
+kbl(sim_tbl[,table_vars], booktabs=T, digits=digits,
     col.names=col.names, format='latex', escape=F)
 ```
 
@@ -72,11 +72,11 @@ Column 5 gives the maximum number of strictly positive preference probabilities 
 Column 6 shows the difference between the maximum and minimum log likelihood gradient elements associated with strictly positive preference probabilities.
 Column 7 shows the gain in the value of the log likelihood at the last iteration.
 ```{r RPmax_table, echo=F, message=FALSE, warning=FALSE}
-table_vars <- c('exper', 'pi_maxl', 'pi_nit', 'pi_t', 'pi_nS', 'pi_sdel', 'pi_ldel')
+table_vars <- c('Domain', 'pi_maxl', 'pi_nit', 'pi_t', 'pi_nS', 'pi_sdel', 'pi_ldel')
 digits <- c(0, 2, 0, 2, 0, 7, 14)
 col.names <- c('Domain', 'Max. like.', 'Nb. of iterations', 'Time ($s$)',
                'Nb. $\\pi_i > 0$', 'score range', '$\\Delta$ like')
-kbl(tbl[,table_vars], booktabs=T, digits=digits,
+kbl(sim_tbl[,table_vars], booktabs=T, digits=digits,
     col.names=col.names, format='latex', escape=F)
 ```
 
@@ -89,7 +89,6 @@ The third and fourth columns give $S_1^{(l)}$ and $\phi_1^{(l)}$, the number of 
 The fourth and fifth columns give $S_2^{(l)}$ and $\phi_2^{(l)}$, the number of repetitions and the autocorrelation parameter of the mutation stage update of each small block $\gamma_{[xy...]}$.
 
 ```{r cycle_table, echo=F, message=FALSE, warning=FALSE}
-cycle_schedule <- sim[[1]]$cycle_schedule
 cycle_schedule$l <- seq(nrow(cycle_schedule))
 table_vars <- c('l', 'lambda_breaks', 'n_big_sweeps', 'phi_big_sweeps',
                 'n_sm_sweeps', 'phi_sm_sweeps')
@@ -108,9 +107,9 @@ The first column gives the number of $(x,A)$ pairs such that $N_A(x) > 0$, out o
 The second through fourth columns give the elements of the $\theta$ parameter of the initial importance Beta-prime distribution.
 
 ```{r sim_table, echo=F, message=FALSE, warning=FALSE}
-table_vars <- c('exper', 'n_plus', 'theta1', 'theta2', 'theta3')
+table_vars <- c('Domain', 'n_plus', 'theta1', 'theta2', 'theta3')
 digits <- c(0, 0, 2, 2, 2)
 col.names <- c('Domain', '$N_+$', '$\\theta_1$', '$\\theta_2$', '$\\theta_3$')
-kbl(tbl[,table_vars], booktabs=T, digits=digits,
+kbl(sim_tbl[,table_vars], booktabs=T, digits=digits,
     col.names = col.names, format='latex', escape=F)
 ```
